--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -51,22 +54,38 @@
 </header>
 
 
+
   <!-- -- -- -- -- SECTION  -- -- -- -- -->
 <section class="about-section">
-    <p>
-      Mi portafolio es un espacio donde quiero compartir los aprendizajes, habilidades y experiencias que he desarrollado como diseñador. 
-      Aquí se muestra cómo aplico mis conocimientos en diferentes proyectos y diferentes áreas, con el objetivo de presentarme como un 
-      profesional capaz de aportar valor a sus propuestas y necesidades visuales con mi estilo. Con ello busco transmitir un mensaje de 
-      compromiso, pasión y constante crecimiento, destacando mi capacidad para adaptarme a diferentes contextos y necesidades del diseño.
-    </p>
+    
+    <div class="text">
+        <p>Mi portafolio es un espacio donde quiero <span class="red">compartir</span> los aprendizajes,
+             habilidades y experiencias que he desarrollado como diseñador. 
+             Aquí se muestra cómo aplico mis conocimientos en diferentes proyectos y diferentes áreas,
+              con el objetivo de presentarme como un profesional capaz de aportar valor a sus propuestas 
+              y necesidades visuales con mi estilo, con ello busco transmitir un mensaje de compromiso, 
+              pasión y constante crecimiento, destacando mi capacidad para adaptarme
+               a diferentes contextos y necesidades del diseño.</p>
+    </div>
+
 </section>
 
 
 
+<section class="spacio">
+
+</section>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
-  <script src="main.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
+
+
+
 
