--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
 
   <!-- -- -- -- -- HEADER  -- -- -- -- -->
 <header>
+    <div class="image-stack"></div>
   <img class="header-img" src="imagenes/mano.png" alt="Centered Image">
     <h1 class="text-center">Portafolio <br>Pulso</h1>
+</div>
+
 </header>
 
 
+<hr class="solid">
 
   <!-- -- -- -- -- SECTION  -- -- -- -- -->
 <section class="about-section">
     
-    <div class="text">
-        <p>Mi portafolio es un espacio donde quiero <span class="red">compartir</span> los aprendizajes,
+    <div class="text-about">
+        <p class="scroll-about">Mi portafolio es un espacio donde quiero <span class="red">compartir</span> los aprendizajes,
              habilidades y experiencias que he desarrollado como diseñador. 
              Aquí se muestra cómo aplico mis conocimientos en diferentes proyectos y diferentes áreas,
               con el objetivo de presentarme como un profesional capaz de aportar valor a sus propuestas 
@@ -70,11 +74,46 @@
 
 </section>
 
+<hr class="solid">
 
+<!-- -- -- -- -- SECTION DE SECCIONES -- -- -- -- -->
+<section>
+    <div class="work-grid">
+        <div class="text-web-title">
+            <h1>Diseño Web</h1>
+        </div>
 
-<section class="spacio">
+    <div class="work-item">
+        <img class="main-img" src="imagenes/web-design.jpg" alt="Work 1">
+        <img class="hover-img" src="imagenes/web-design.jpg" alt="Work 1 Hover">
+        <canvas class="noise-canvas"></canvas>
+    <!-- <div class="hover-card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image" class="hover-card-img">
+    <div class="hover-card-content">
+        <h2 class="hover-card-title">Card Title</h2>
+        <p class="hover-card-text">This is a simple hover card with a title, image, and some text content.</p>
+        <button class="hover-card-button">Learn More</button>
+        
+      </div>
+    </div> -->
+  </div>
+
+  <div class="text-web">
+    <p>En esta sección se reúnen proyectos de diseño web creados con un enfoque 
+        que integra estética, funcionalidad y usabilidad. Cada trabajo busca ofrecer 
+        una experiencia digital clara, atractiva y adaptable a distintos dispositivos, 
+        siempre alineada con la identidad de cada marca.</p>
+    </div>
+
+</div>
 
 </section>
+
+<hr class="solid">
+
+<div class="cursor"></div>
+
+<section class="spacio"></section>
 
 
 
@@ -83,9 +122,6 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
     <script src="main.js"></script>
+
 </body>
 </html>
-
-
-
-
