--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section class="about-section">
     
     <div class="text-about">
-        <p class="scroll-about">Mi portafolio es un espacio donde quiero <span class="red">compartir</span> los aprendizajes,
+        <p class="scroll-about">Mi portafolio es un espacio donde quiero compartir los aprendizajes,
              habilidades y experiencias que he desarrollado como diseñador. 
              Aquí se muestra cómo aplico mis conocimientos en diferentes proyectos y diferentes áreas,
               con el objetivo de presentarme como un profesional capaz de aportar valor a sus propuestas 
@@ -125,3 +125,4 @@
 
 </body>
 </html>
+
