--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <hr class="solid">
 
-<!-- -- -- -- -- SECTION DE SECCIONES -- -- -- -- -->
+<!-- -- -- -- -- SECTION DE SECCIONES WEB-- -- -- -- -->
 <section>
     <div class="work-grid">
         <div class="text-web-title">
@@ -109,6 +109,44 @@
 </section>
 
 <hr class="solid">
+
+<!-- -- -- -- -- SECTION DE SECCIONES PHOTO-- -- -- -- -->
+<section>
+    <div class="work-grid">
+        <div class="text-photo">
+            <p>En esta sección se recopilan proyectos fotográficos 
+                que exploran la composición, la luz y la narrativa visual, 
+                Cada imagen busca captar momentos únicos y transmitir la esencia de su contexto</p>
+        </div>
+        
+
+    <div class="work-item">
+        <img class="main-img" src="imagenes/cam.jpg" alt="Work 1">
+        <img class="hover-img" src="imagenes/cam.jpg" alt="Work 1 Hover">
+        <canvas class="noise-canvas"></canvas>
+    <!-- <div class="hover-card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image" class="hover-card-img">
+    <div class="hover-card-content">
+        <h2 class="hover-card-title">Card Title</h2>
+        <p class="hover-card-text">This is a simple hover card with a title, image, and some text content.</p>
+        <button class="hover-card-button">Learn More</button>
+        
+      </div>
+    </div> -->
+  </div>
+
+  <div class="text-photo-title">
+            <h1>Fotografía</h1>
+        </div>
+  
+
+</div>
+
+</section>
+
+<hr class="solid">
+
+
 
 <div class="cursor"></div>
 
