--- a/index.html
+++ b/index.html
@@ -11,55 +11,43 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
+<header class="navbar" id="navbar">
+  <nav class="navbar-expand-lg">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                  <li class="nav-home">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-
-                  <li class="nav-web">
-                      <a class="nav-link" href="#">Diseño Web</a>
-                  </li>
-
-                  <li class="nav-ilustracion">
-                      <a class="nav-link" href="#">Ilustración</a>
-                  </li>
-
-                  <li class="nav-foto">
-                      <a class="nav-link" href="#">Fotografia</a>
-                  </li>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav" id="navbar-nav">
+                <li class="nav-home"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                <li class="nav-web"><a class="nav-link" href="web.html">Diseño Web</a></li>
+                <li class="nav-ilustracion"><a class="nav-link" href="#">Ilustración</a></li>
+                <li class="nav-foto"><a class="nav-link" href="#">Fotografia</a></li>
               </ul>
           </div>
       </div>
   </nav>
-
-
-  <!-- -- -- -- -- HEADER  -- -- -- -- -->
-<header>
-
-    <img class="header-img" src="imagenes/mano.png" alt="Centered Image">
-    <h1 class="text-center">Portafolio <br>Pulso</h1> 
-
 </header>
 
+  <!-- -- -- -- -- HEADER  -- -- -- -- -->
+<section class="image-stack">
 
-<hr class="solid">
+<section class="section-hero" id="image-container">
+    <img class="hero-img" src="imagenes/mano.png" alt="Centered Image">
+    <h1 class="hero-text">Portafolio <br>Pulso</h1> 
+</section>
+
 
   <!-- -- -- -- -- SECTION  -- -- -- -- -->
-<section class="about-section">
+<section class="about-section" id="image-container">
     
     <div class="text-about">
         <p class="scroll-about">Mi portafolio es un espacio donde quiero compartir los aprendizajes,
@@ -73,11 +61,13 @@
 
 </section>
 
+</section>
+
 <hr class="solid">
 
 <!-- -- -- -- -- SECTION DE SECCIONES WEB-- -- -- -- -->
 <section>
-    <div class="work-grid">
+    <div class="section-grid">
         <div class="text-web-title">
             <h1>Diseño Web</h1>
         </div>
@@ -86,15 +76,15 @@
         <img class="main-img" src="imagenes/web-design.jpg" alt="Work 1">
         <img class="hover-img" src="imagenes/web-design.jpg" alt="Work 1 Hover">
         <canvas class="noise-canvas"></canvas>
-    <!-- <div class="hover-card">
+    <div class="hover-card">
         <img src="https://via.placeholder.com/300x150" alt="Card Image" class="hover-card-img">
     <div class="hover-card-content">
         <h2 class="hover-card-title">Card Title</h2>
         <p class="hover-card-text">This is a simple hover card with a title, image, and some text content.</p>
-        <button class="hover-card-button">Learn More</button>
+        <button class="hover-card-button" id="hover-card-button">Learn More</button>
         
       </div>
-    </div> -->
+    </div>
   </div>
 
   <div class="text-web">
@@ -112,7 +102,7 @@
 
 <!-- -- -- -- -- SECTION DE SECCIONES PHOTO-- -- -- -- -->
 <section>
-    <div class="work-grid">
+    <div class="section-grid">
         <div class="text-photo">
             <p>En esta sección se recopilan proyectos fotográficos 
                 que exploran la composición, la luz y la narrativa visual, 
@@ -145,8 +135,6 @@
 </section>
 
 <hr class="solid">
-
-
 
 <div class="cursor"></div>
 
