--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="loading">
+
+      <div class="loader-wrap" id="loader">
+    <div class="loader-caption">Cargando — por favor espera</div>
+    <div class="panels" id="panels">
+      <div class="panel a">Diseño</div>
+      <div class="panel b">Creatividad</div>
+      <div class="panel c">Pulso</div>
+    </div>
+    <div class="progress" aria-hidden="true">
+      <i id="progressBar"></i>
+    </div>
+  </div>
 
   <!-- Navbar -->
 <header class="navbar" id="navbar">
