--- a/index.html
+++ b/index.html
@@ -17,18 +17,7 @@
 </head>
 <body class="loading">
 
-      <div class="loader-wrap" id="loader">
-    <div class="loader-caption">Cargando — por favor espera</div>
-    <div class="panels" id="panels">
-      <div class="panel a">Diseño</div>
-      <div class="panel b">Creatividad</div>
-      <div class="panel c">Pulso</div>
-    </div>
-    <div class="progress" aria-hidden="true">
-      <i id="progressBar"></i>
-    </div>
-  </div>
-
+    
   <!-- Navbar -->
 <header class="navbar" id="navbar">
   <nav class="navbar-expand-lg">
@@ -158,7 +147,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 
 </body>
 </html>
