--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
-<body class="loading">
+<body>
 
-    
+
   <!-- Navbar -->
 <header class="navbar" id="navbar">
   <nav class="navbar-expand-lg">
@@ -74,11 +74,11 @@
         </div>
 
     <div class="work-item">
-        <img class="main-img" src="imagenes/web-design.jpg" alt="Work 1">
-        <img class="hover-img" src="imagenes/web-design.jpg" alt="Work 1 Hover">
+        <img class="main-img" src="imagenes/web-design.jpg" alt="Work 1" loading="lazy">
+        <img class="hover-img" src="imagenes/web-design.jpg" alt="Work 1 Hover"loading="lazy">
         <canvas class="noise-canvas"></canvas>
     <div class="hover-card">
-        <img src="https://via.placeholder.com/300x150" alt="Card Image" class="hover-card-img">
+        <img src="" alt="Card Image" class="hover-card-img">
     <div class="hover-card-content">
         <h2 class="hover-card-title">Card Title</h2>
         <p class="hover-card-text">This is a simple hover card with a title, image, and some text content.</p>
@@ -112,8 +112,8 @@
         
 
     <div class="work-item">
-        <img class="main-img" src="imagenes/cam.jpg" alt="Work 1">
-        <img class="hover-img" src="imagenes/cam.jpg" alt="Work 1 Hover">
+        <img class="main-img" src="imagenes/cam.jpg" alt="Work 1" loading="lazy">
+        <img class="hover-img" src="imagenes/cam.jpg" alt="Work 1 Hover" loading="lazy">
         <canvas class="noise-canvas"></canvas>
     <!-- <div class="hover-card">
         <img src="https://via.placeholder.com/300x150" alt="Card Image" class="hover-card-img">
